<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.github.sabren</groupId>
  <artifactId>java-xmlhttprequest</artifactId>
  <version>1.0.2.OL-0-0</version>
  <packaging>bundle</packaging>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <xmlhttprequest.version>1.0.2</xmlhttprequest.version>
  </properties>

  <build>
    <sourceDirectory>src</sourceDirectory>

    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <version>3.2.0</version>
        <executions>
          <execution>
            <goals>
              <goal>parse-version</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.2.1</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.felix</groupId>
        <artifactId>maven-bundle-plugin</artifactId>
        <version>4.2.1</version>
        <extensions>true</extensions>
        <configuration>
          <instructions>
            <Bundle-Name>java-XmlHttpRequest</Bundle-Name>
            <Bundle-SymbolicName>com.github.sabren.java.xmlhttprequest;singleton:=true</Bundle-SymbolicName>
            <Bundle-Version>${parsedVersion.osgiVersion}</Bundle-Version>
            <Bundle-ActivationPolicy>lazy</Bundle-ActivationPolicy>
            <Import-Package>!javax.*</Import-Package>
            <Export-Package>
              org.jdesktop.beans;version=${xmlhttprequest.version};-noimport:=true,
              org.jdesktop.dom;version=${xmlhttprequest.version};-noimport:=true,
              org.jdesktop.http;version=${xmlhttprequest.version};-noimport:=true,
              org.jdesktop.http.async;version=${xmlhttprequest.version};-noimport:=true,
              org.jdesktop.http.async.event;version=${xmlhttprequest.version};-noimport:=true,
              org.jdesktop.xpath;version=${xmlhttprequest.version};-noimport:=true,
              org.jdesktop.xpath.function;version=${xmlhttprequest.version};-noimport:=true
            </Export-Package>
            <Automatic-Module-Name>com.github.sabren.java.xmlhttprequest</Automatic-Module-Name>
          </instructions>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>